# Celeste-Collab-TASing-Utilities

./: README.md
extractor/: .gitignore  extractor.py  pyproject.toml  requirements.txt
lobby_analyzer/: Cargo.toml
lobby_analyzer/src/: algorithm.rs  main.rs  serialization.rs
lobby_analyzer/tests/: test.rs
