[package]
name = "lobby_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"

[[bin]]
name = "lobby_analyzer"
path = "src/main.rs"

[lib]
name = "lobby_analyzer"
path = "src/lib.rs"
